@@ -1,4 +1,7 @@
 2008-04-21   Basile Starynkevitch  <basile@starynkevitch.net>
+	MELT branch merged with trunk r134529 (added fg-byte-scan.c from new trunk)
+
+22008-04-21   Basile Starynkevitch  <basile@starynkevitch.net>
 	MELT branch merged with trunk r134525
 
 2008-04-17   Basile Starynkevitch  <basile@starynkevitch.net>
