@@ -1,3 +1,9 @@
+2008-04-24  Kenneth Zadeck <zadeck@naturalbridge.com>
+	* sbitmap.c (sbitmap_range_empty_p): New function.
+	* sbitmap.h (sbitmap_range_empty_p): New function.
+	* bitmap.h: Now includes obstack.h.  
+
+
 2008-04-24  Richard Sandiford  <rsandifo@nildram.co.uk>
 	    Kenneth Zadeck <zadeck@naturalbridge.com>
 
